cmake_minimum_required(VERSION 3.15)
project(gameboy_emul C)
set(CMAKE_C_STANDARD 11)

add_executable(error error.c)
add_executable( libsid_demo libsid_demo.c)
add_executable(sidlib sidlib.c)
add_executable(alu alu.c)
add_executable(unit-test-alu unit-test-alu.c)
add_executable(unit-test-bit unit-test-alu.c)
add_executable(unit-test-bus unit-test-bus.c)
add_executable(unit-test-component unit-test-component.c)
add_executable(unit-test-memory unit-test-memory.c)
add_executable(util util.c)
add_executable(bit bit.c)
add_executable(brouillon brouillon.c)
add_executable(component component.c)
add_executable(bus bus.c)